# MiniJava

./: .gitignore  CMakeLists.txt  README.md  main.cpp  reqs-draft.md
class_storage/: class_storage.cpp  class_storage.h
code_samples/: correct.java  cycle.java  incorrect.java  ir_cond_to_expr.java  ir_expr_to_cond.java  logic.java  symbols_func_call_correct.java  symbols_func_incorrect.java  symbols_redefinition.java  symbols_shadow.java  symbols_undefined.java
function_mechanism/frame/: frame.cpp  frame.h
function_mechanism/index_table/: index_table.cpp  index_table.h
instructions/: instruction.h
instructions/binary_operations/: binary_operations.cpp  binary_operations.h
instructions/jumps/: call.cpp  call.h  conditional_jumps.cpp  conditional_jumps.h  jump.cpp  jump.h
instructions/label/: label.cpp  label.h
instructions/movements/: movements.cpp  movements.h
instructions/sources/: source.cpp  source.h
irtree/blocks/block/: block.cpp  block.h
irtree/blocks/block_sequence/: block_sequence.cpp  block_sequence.h
irtree/blocks/trace/: trace.cpp  trace.h
irtree/function_mechanism/address/: address.cpp  address.h
irtree/function_mechanism/frame/: frame.cpp  frame.h
irtree/generators/label/: label.cpp  label.h
irtree/generators/temporary/: temporary.cpp  temporary.h
irtree/nodes/: node.h
irtree/nodes/expression/: binary_operation.h  call.h  constant.h  eseq.h  expression.cpp  expression.h  memory_access.h  name.h  temporary.h
irtree/nodes/statement/: conditional_jump.h  expression.h  jump.h  label.h  move.h  sequence.h  statement.cpp  statement.h
irtree/visitors/: visitor.h
irtree/visitors/block_builder/: block_builder.cpp  block_builder.h
irtree/visitors/call_transformer/: call_transformer.cpp  call_transformer.h
irtree/visitors/eseq_mover/: eseq_mover.cpp  eseq_mover.h
irtree/visitors/instruction_selector/: instruction_selector.cpp  instruction_selector.h
irtree/visitors/linearizer/: linearizer.cpp  linearizer.h
irtree/visitors/printer/: printer.cpp  printer.h
irtree/wrapper/: wrapper.h
irtree/wrapper/conditional/: conditional.cpp  conditional.h
irtree/wrapper/conditional/comparisons/: comparisons.cpp  comparisons.h
irtree/wrapper/conditional/logic/: logic.cpp  logic.h
irtree/wrapper/expression/: expression.cpp  expression.h
irtree/wrapper/statement/: statement.cpp  statement.h
parser/: .gitignore  driver.cpp  driver.h  parser.y  scanner.h  scanner.l
program/: node.h  visitor.h
program/arguments/: arguments.cpp  declaraion.h  values.h
program/call/: call.cpp  call.h
program/declaration/: class.h  declaration.cpp  declaration.h  method.h  variable.h
program/expression/: allocation.h  ariphmetics.h  call.h  compare.h  constants.h  expression.cpp  expression.h  length.h  logic.h  lvalue.h  this.h
program/lvalue/: lvalue.cpp  lvalue.h
program/program/: program.cpp  program.h
program/statement/: assert.h  assingment.h  call.h  complex.h  conditional.h  print.h  return.h  statement.cpp  statement.h  variable.h
program/types/: types.cpp  types.h
symbol_tree/: symbol_layer.cpp  symbol_layer.h  symbol_tree.cpp  symbol_tree.h
types/: class.h  function.h  integer.h  type.cpp  type.h
visitors/function_caller/: function_caller.cpp  function_caller.h
visitors/interpreter/: interpreter.cpp  interpreter.h
visitors/irtee_builder/: irtee_builder.cpp  irtee_builder.h
visitors/symbol_tree_builder/: symbol_tree_builder.cpp  symbol_tree_builder.h
visitors/tree_printer/: tree_printer.cpp  tree_printer.h
